--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
   <head>
 
@@ -25,11 +25,11 @@
     <div id="articles" class="div">
     </div>
 
-
     <div id="movies">
     </div>
   
-    
+    <div id="modal-card">
+    </div>
   
 
     <script src="script.js"></script>
